--- a/Football_Scores-master/app/src/main/res/layout/widget_item.xml
+++ b/Football_Scores-master/app/src/main/res/layout/widget_item.xml
@@ -2,27 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/widget_league"
+    <ImageView
+        android:id="@+id/widget_image_football"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="18sp"/>
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"/>
 
-    <TextView
-    android:id="@+id/widget_text_home"
-    android:gravity="left"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="18sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/widget_text_away"
-        android:gravity="left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/widget_league"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/widget_text_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/widget_text_away"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="18sp" />
+    </LinearLayout>
 </LinearLayout>
