--- a/Football_Scores-master/app/src/main/res/layout/fragment_about.xml
+++ b/Football_Scores-master/app/src/main/res/layout/fragment_about.xml
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/about_text"
-        android:textSize="12sp" />
+        android:textSize="@dimen/about_text" />
 
 </RelativeLayout>
