--- a/Football_Scores-master/app/src/main/res/values/dimens.xml
+++ b/Football_Scores-master/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="share_button_margin">150dp</dimen>
     <dimen name="TeamNames">17sp</dimen>
     <dimen name="Score">30sp</dimen>
+    <!-- added text to dimen to allow for different screen sizes -->
+    <dimen name="about_text">14sp</dimen>
     <dimen name="League">15sp</dimen>
 </resources>
