add back button functionality to ViewPager, add tab titles to dimen folder and adjust text size for different screen sizes, refactor to conform with Java naming conventions.

--- a/Football_Scores-master/app/src/main/res/values-sw600dp/dimen.xml
+++ b/Football_Scores-master/app/src/main/res/values-sw600dp/dimen.xml
@@ -11,5 +11,6 @@
     <!-- added text to dimen to allow for different screen sizes -->
     <dimen name="about_text">18sp</dimen>
     <dimen name="League">15sp</dimen>
+    <dimen name="tab_title">20sp</dimen>
 </resources>
 
